feat: add HDFS read/write examples